--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,13 +17,11 @@
                         <span> Password </span> <input type="password" name="password"><br/>
                     </div>
                 </div>
-                <input class="sendbtn" type="submit">
+                <button class="sendbtn">login</button>
     	   </form>
         </div>
 
     	<div class="result"></div>
-
-        <div class='signup'><a href='/join'>Sign up</a></div>
 
 
     	<script>
@@ -31,7 +29,7 @@
                 e.preventDefault();
     			var email = document.getElementsByName('email')[0].value
                 var password = document.getElementsByName('password')[0].value;
-    			sendAjax('http://localhost:3000/login', {'email' : email, 'password' : password}
+    			sendAjax('http://127.0.0.1:3000/login', {'email' : email, 'password' : password}
                 );
     		})
     		function sendAjax(url, data){ 
