--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,10 @@
     </head>
     <body>
 
+        <header>
+            <div><a href="/logout">logout</a></div>
+        </header>
+
     <section class="content">
         <h1>main page</h1>
 
